--- a/apps/infrastructure/kube-prometheus-stack-crds.yaml
+++ b/apps/infrastructure/kube-prometheus-stack-crds.yaml
@@ -1,26 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prometheus-pushgateway
+  name: kube-prometheus-stack-crds
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: infrastructure-portfolio
   source:
-    repoURL: https://prometheus-community.github.io/helm-charts
-    targetRevision: 1.18.2
-    chart: prometheus-pushgateway
-    helm:
-      values: |
-        ingress:
-          enabled: true
-          hosts:
-            - pushgateway.local.gd
-          tls:
-            - secretName: local-tls
-              hosts:
-                - pushgateway.local.gd
+    repoURL: https://github.com/prometheus-community/helm-charts.git
+    path: charts/kube-prometheus-stack/crds/
+    targetRevision: kube-prometheus-stack-39.8.0
+    directory:
+      recurse: true
   destination:
     server: https://kubernetes.default.svc
     namespace: prometheus
@@ -31,6 +23,7 @@ spec:
     syncOptions:
     - Validate=true
     - CreateNamespace=true
+    - Replace=true
     retry:
       limit: 5
       backoff:
