add preferred address flag

--- a/apps/infrastructure/metrics-server.yaml
+++ b/apps/infrastructure/metrics-server.yaml
@@ -15,6 +15,7 @@ spec:
       values: |
         extraArgs:
           - --kubelet-insecure-tls=true
+          - --kubelet-preferred-address-types=InternalIP
   destination:
     server: https://kubernetes.default.svc
     namespace: kube-system
