--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,11 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base"
-  ]
+  ],
+  "argocd": {
+    "fileMatch": ["^apps/.+/.+\\.yaml$"]
+  },
+  "helm-values": {
+    "enabled": false
+  }
 }
