--- a/apps/infrastructure/prometheus-pushgateway.yaml
+++ b/apps/infrastructure/prometheus-pushgateway.yaml
@@ -13,6 +13,9 @@ spec:
     chart: prometheus-pushgateway
     helm:
       values: |
+        serviceMonitor:
+          enabled: true
+          namespace: prometheus
         ingress:
           enabled: true
           hosts:
